name:                guns-n-fun
version:             0.1
-- synopsis:
-- description:
-- homepage:
-- license:
-- license-file:
author:              Author name here
maintainer:          author@email.com
copyright:           2017 Author name here
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  ghc-options:         -Wall -fno-warn-type-defaults
  exposed-modules:
    GunsAndFun

  build-depends:       base >= 4.7 && < 5, gloss, gloss-juicy==0.2.2
  default-language:    Haskell2010

executable guns-n-fun
  hs-source-dirs:      src
  main-is:             Main.hs
  ghc-options:         -Wall -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , guns-n-fun, gloss==1.11.*, gloss-juicy==0.2.2
  other-modules:       GunsAndFun, Handle
                      , Initialize
                      , Render
                      , Types
                      , Update
  default-language:    Haskell2010

test-suite guns-n-fun-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , guns-n-fun
  ghc-options:         -Wall -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

